# EDA2

./: CMakeLists.txt  main.cpp
data/: points2.csv
include/: classes.h
src/: classes.cpp
